--- a/SpringBoot/src/main/resources/templates/member/update.html
+++ b/SpringBoot/src/main/resources/templates/member/update.html
@@ -12,7 +12,7 @@
 	<h1>templates/member/update.html</h1>
 	<form action="/updatePro" method="post">
 		아이디 : <input type="text" name="id" th:value="${member.id}" readonly><br>
-		비밀번호 : <input type="password" name="passwd" th:value="${member.passwd}"><br>
+		비밀번호 : <input type="password" name="passwd" ><br>
 		이름 : <input type="text" name="name" th:value="${member.name}"><br>
 		<input type="submit" value="회원정보 수정">
 	</form>
