--- a/SpringBoot/src/main/resources/templates/member/list.html
+++ b/SpringBoot/src/main/resources/templates/member/list.html
@@ -12,14 +12,17 @@
 	    <tr>
 	        <th>회원 ID</th>
 	        <th>이름</th>
+			<th th:if="${session.id == 'admin'}">비밀번호</th>
 	    </tr>
 	    <tr th:each="member : ${members}">
 	        <td th:text="${member.id}"></td>
 	        <td th:text="${member.name}"></td>
+			<td th:if="${session.id == 'admin'}" th:text="${member.passwd}"></td>
 	    </tr>
 	</table>
 	
 	<a href="/main"> 메인페이지로 이동 </a>
+	
 	
 </body>
 
