--- a/SpringBoot/src/main/resources/templates/board/list.html
+++ b/SpringBoot/src/main/resources/templates/board/list.html
@@ -12,29 +12,32 @@
 	    <tr>
 	        <th>번호</th>
 	        <th>제목</th>
-			<th >작성자</th>
-			<th >작성시간</th>
-			<th >조회수</th>
+	        <th>작성자</th>
+	        <th>작성시간</th>
+	        <th>조회수</th>
 	    </tr>
-	    <tr th:each="board : ${boards1}">
+	    <tr th:each="board : ${boards}">
 	        <td th:text="${board.num}"></td>
-	        <td th:text="${board.subject}"></td>
-			<td th:text="${board.name}"></td>
-			<td th:text="${board.rdate}"></td>
-			<td th:text="${board.readcount}"></td>
+			<td><a th:href="@{/board/content(num=${board.num})}" th:text="${board.subject}"></a></td>
+	        <td th:text="${board.name}"></td>
+	        <td th:text="${board.rdate}"></td>
+	        <td th:text="${board.readcount}"></td>
 	    </tr>
 	</table>
-	
-	<div>
-	    <a th:if="${boards.number > 0}" th:href="@{/list(page=${boards.number - 1}, size=10)}">이전</a>
-	    <span th:text="'페이지 ' + (${boards.number + 1}) + ' / ' + ${boards.totalPages}"></span>
-	    <a th:if="${boards.number + 1 < boards.totalPages}" th:href="@{/list(page=${boards.number + 1}, size=10)}">다음</a>
-	</div>
 
+	<div th:if="${isPaged}">
+	    <a th:if="${currentPage > 0}" th:href="@{/board/list(page=${currentPage - 1}, size=10, paged=true)}">이전</a>
+	    
+	    <span th:each="pageNum : ${#numbers.sequence(0, totalPages - 1)}">
+	        <a th:href="@{/board/list(page=${pageNum}, size=10, paged=true)}" th:text="${pageNum + 1}"></a>
+	    </span>
+
+	    <a th:if="${currentPage + 1 < totalPages}" th:href="@{/board/list(page=${currentPage + 1}, size=10, paged=true)}">다음</a>
+	</div>
 	
-	
-	<a href="/main"> 메인페이지로 이동 </a>
-	
+	<a th:href="@{/board/list(paged=false)}">전체 리스트 보기</a> <a href="/board/write"> 게시판 글쓰기</a> <a href="/board/fwrite"> 게시판 파일 글쓰기</a><br><br>
+
+	<a href="/main">메인 페이지로 가기</a>
 	
 </body>
 
