--- a/SpringBoot/src/main/resources/templates/board/list.html
+++ b/SpringBoot/src/main/resources/templates/board/list.html
@@ -2,13 +2,19 @@
 
 <head>
 	<title>list title</title>
-	
+	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
 </head>
+
 
 <body>
 	<!--	http://localhost:8080/list : html
 		static : 이미지, css, js, uploadPath
 	-->
+	<header th:insert="~{inc/top}"></header>
+	<div class="all">
+		<div class="main">
 	<table border="1">
 	    <tr>
 	        <th>번호</th>
@@ -25,20 +31,26 @@
 	        <td th:text="${board.readcount}"></td>
 	    </tr>
 	</table>
-
-	<div th:if="${isPaged}">
-	    <a th:if="${currentPage > 0}" th:href="@{/board/list(page=${currentPage - 1}, size=10, paged=true)}">이전</a>
-	    
-	    <span th:each="pageNum : ${#numbers.sequence(0, totalPages - 1)}">
-	        <a th:href="@{/board/list(page=${pageNum}, size=10, paged=true)}" th:text="${pageNum + 1}"></a>
-	    </span>
-
-	    <a th:if="${currentPage + 1 < totalPages}" th:href="@{/board/list(page=${currentPage + 1}, size=10, paged=true)}">다음</a>
 	</div>
 	
-	<a th:href="@{/board/list(paged=false)}">전체 리스트 보기</a> <a href="/board/write"> 게시판 글쓰기</a> <a href="/board/fwrite"> 게시판 파일 글쓰기</a><br><br>
+	<div th:if="${isPaged}" class="Paging">
+	    <a th:if="${currentPage > 0}" th:href="@{/board/list(page=${currentPage - 1}, size=10, paged=true)}" class="back">이전</a>
+	    
+	    <span th:each="pageNum : ${#numbers.sequence(0, totalPages - 1)}">
+	        <a th:href="@{/board/list(page=${pageNum}, size=10, paged=true)}" th:text="${pageNum + 1}" class="PageNum"></a>
+	    </span>
 
-	<a href="/main">메인 페이지로 가기</a>
+	    <a th:if="${currentPage + 1 < totalPages}" th:href="@{/board/list(page=${currentPage + 1}, size=10, paged=true)}" class="next">다음</a>
+	</div>
+	<div class="btn">
+		<a th:href="@{/board/list(paged=false)}" class="allList">전체 리스트 보기</a>
+		<a href="/board/write" class="write"> 게시판 글쓰기</a>
+		<a href="/board/fwrite" class="fwrite"> 게시판 파일 글쓰기</a>
+		<a href="/main" class="home_btn">메인 페이지로 가기</a>
+	</div>
+	</div>
+	
+	<footer th:insert="~{inc/footer}"></footer>
 	
 </body>
 
