--- a/SpringBoot/src/main/resources/templates/board/update.html
+++ b/SpringBoot/src/main/resources/templates/board/update.html
@@ -1,7 +1,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-	<title>update title</title>
+<title>update title</title>
+<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/content.css}">
+<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
 </head>
 
 <body>
@@ -9,14 +12,23 @@
 		static : 이미지, css, js, uploadPath
 	-->
 
-	<h1>templates/board/update.html</h1>
-	<form action="/board/updatePro" method="post">
-		<input type="hidden" name="num" th:value="${board.num}">
-		제목 : <input type="text" name="subject" th:value="${board.subject}"><br>
-		작성자 : <input type="text" name="name" th:value="${board.name}" readonly><br>
-		내용 : <textarea name="content" rows="5" cols="10" th:text="${board.content}"></textarea><br>
-	<input type="submit" value="수정하기">
-	</form>
+	<header th:insert="~{inc/top}"></header>
+	<div class="all">
+		<div class="main">
+			<form action="/board/updatePro" method="post">
+				<input type="hidden" name="num" th:value="${board.num}"><label>제목ㄱ
+					:</label> <input type="text" name="subject" th:value="${board.subject}"><br>
+				<label>이름 :</label><input type="text" name="name"
+					th:value="${board.name}" readonly><br>
+				<label>내용 :</label>
+				<textarea name="content" rows="5" cols="10"
+					th:text="${board.content}"></textarea>
+				<br> <input type="submit" value="수정하기">
+			</form>
+		</div>
+	</div>
+	
+	<footer th:insert="~{inc/footer}"></footer>
 </body>
 
 </html>
