--- a/SpringBoot/src/main/resources/templates/member/login.html
+++ b/SpringBoot/src/main/resources/templates/member/login.html
@@ -2,16 +2,18 @@
 
 <head>
 	<title>login title</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
 </head>
 
 <body>
 	<!--	http://localhost:8080/login : html
 		static : 이미지, css, js, uploadPath
 	-->
-	
+	<header th:insert="~{inc/top}"></header>
 	<a href="/main"> 메인페이지 이동 </a> <br>
 	
-	<h1>templates/member/login.html</h1>
+	
 	<form th:action="@{/loginPro}" method="post">
 		아이디 : <input type="text" name="id"><br>
 		비밀번호 : <input type="password" name="passwd"><br>
@@ -19,6 +21,7 @@
 	</form>
 	
 	<a href="/insert"> 회원가입 </a>
+	<footer th:insert="~{inc/footer}"></footer>
 </body>
 
 </html>
