--- a/SpringBoot/src/main/resources/templates/member/update.html
+++ b/SpringBoot/src/main/resources/templates/member/update.html
@@ -2,6 +2,8 @@
 
 <head>
 	<title>update title</title>
+	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
 </head>
 
 <body>
@@ -9,13 +11,15 @@
 		static : 이미지, css, js, uploadPath
 	-->
 
-	<h1>templates/member/update.html</h1>
+	<header th:insert="~{inc/top}"></header>
 	<form action="/updatePro" method="post">
 		아이디 : <input type="text" name="id" th:value="${member.id}" readonly><br>
 		비밀번호 : <input type="password" name="passwd" ><br>
 		이름 : <input type="text" name="name" th:value="${member.name}"><br>
 		<input type="submit" value="회원정보 수정">
 	</form>
+	
+	<footer th:insert="~{inc/footer}"></footer>
 </body>
 
 </html>
