--- a/SpringBoot/src/main/resources/templates/member/delete.html
+++ b/SpringBoot/src/main/resources/templates/member/delete.html
@@ -4,6 +4,7 @@
 	<title>delete title</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/member.css}">
 </head>
 
 <body>
@@ -11,16 +12,14 @@
 		static : 이미지, css, js, uploadPath
 	-->
 	
-	<a href="/main"> 메인페이지 이동 </a> <br>
-	
 	<header th:insert="~{inc/top}"></header>
+	<div class="main">
 	<form th:action="@{/deletePro}" method="post">
-		아이디 : <input type="text" name="id"><br>
-		비밀번호 : <input type="password" name="passwd"><br>
+		아이디 : <input type="text" name="id"  class="id"><br>
+		비밀번호 : <input type="password" name="passwd" class="passwd"><br>
 		<input type="submit" onclick="return confirmDelete()" value="계정 삭제">
 	</form>
-	
-	<a href="/insert"> 회원가입 </a>
+	</div>
 	
 	<footer th:insert="~{inc/footer}"></footer>
 	
