--- a/SpringBoot/src/main/resources/templates/member/insert.html
+++ b/SpringBoot/src/main/resources/templates/member/insert.html
@@ -4,6 +4,7 @@
 	<title>insert title</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/member.css}">
 </head>
 
 <body>
@@ -12,13 +13,17 @@
 	-->
 
 	<header th:insert="~{inc/top}"></header>
-	<form action="/insertPro" method="post">
-		아이디 : <input type="text" name="id"><br>
-		비밀번호 : <input type="password" name="passwd"><br>
-		이름 : <input type="text" name="name"><br>
-		<input type="submit" value="회원가입">
-	</form>
-	
+	<div class="main">
+	    <form action="/insertPro" method="post">
+	        <div class="form-group"> <label> 아이디 : </label><input type="text" name="id">
+	        </div>
+	        <div class="form-group"> <label> 비밀번호 : </label><input type="password" name="passwd">
+	        </div>
+	        <div class="form-group"> <label> 이름 : </label><input type="text" name="name">
+	        </div>
+	        <input type="submit" value="회원가입">
+	    </form>
+	</div>
 	<footer th:insert="~{inc/footer}"></footer>
 </body>
 
