--- a/SpringBoot/src/main/resources/templates/member/list.html
+++ b/SpringBoot/src/main/resources/templates/member/list.html
@@ -4,6 +4,7 @@
 	<title>list title</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/member.css}">
 </head>
 
 <body>
@@ -12,6 +13,7 @@
 	-->
 	
 	<header th:insert="~{inc/top}"></header>
+	<div class="InfoMain">
 	<table>
 	    <tr>
 	        <th>회원 ID</th>
@@ -24,8 +26,7 @@
 			<td th:if="${session.id == 'admin'}" th:text="${member.passwd}"></td>
 	    </tr>
 	</table>
-	
-	<a href="/main"> 메인페이지로 이동 </a>
+	</div>
 	
 	<footer th:insert="~{inc/footer}"></footer>
 </body>
