--- a/SpringBoot/src/main/resources/templates/member/login.html
+++ b/SpringBoot/src/main/resources/templates/member/login.html
@@ -4,6 +4,7 @@
 	<title>login title</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/member.css}">
 </head>
 
 <body>
@@ -11,16 +12,15 @@
 		static : 이미지, css, js, uploadPath
 	-->
 	<header th:insert="~{inc/top}"></header>
-	<a href="/main"> 메인페이지 이동 </a> <br>
-	
-	
-	<form th:action="@{/loginPro}" method="post">
-		아이디 : <input type="text" name="id"><br>
-		비밀번호 : <input type="password" name="passwd"><br>
-		<input type="submit" value="로그인">
-	</form>
-	
-	<a href="/insert"> 회원가입 </a>
+		<div class="main">
+		    <div class="login-container"> <form th:action="@{/loginPro}" method="post">
+		            <label>아이디</label><input type="text" name="id"><br>
+		            <label>비밀번호</label><input type="password" name="passwd"><br>
+		            <input type="submit" value="로그인">
+		        </form>
+		
+		        <a href="/insert" class="signup"> 회원가입 </a>
+		    </div> </div>
 	<footer th:insert="~{inc/footer}"></footer>
 </body>
 
