--- a/SpringBoot/src/main/resources/templates/member/update.html
+++ b/SpringBoot/src/main/resources/templates/member/update.html
@@ -4,6 +4,7 @@
 	<title>update title</title>
 	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/member.css}">
 </head>
 
 <body>
@@ -12,13 +13,14 @@
 	-->
 
 	<header th:insert="~{inc/top}"></header>
+	<div class="main">
 	<form action="/updatePro" method="post">
-		아이디 : <input type="text" name="id" th:value="${member.id}" readonly><br>
-		비밀번호 : <input type="password" name="passwd" ><br>
-		이름 : <input type="text" name="name" th:value="${member.name}"><br>
+		<label> 아이디 : </label><input type="text" name="id" th:value="${member.id}" readonly><br>
+		<label> 비밀번호 : </label><input type="password" name="passwd" ><br>
+		<label> 이름 : </label><input type="text" name="name" th:value="${member.name}"><br>
 		<input type="submit" value="회원정보 수정">
 	</form>
-	
+	</div>
 	<footer th:insert="~{inc/footer}"></footer>
 </body>
 
