--- a/SpringBoot/src/main/resources/templates/board/list.html
+++ b/SpringBoot/src/main/resources/templates/board/list.html
@@ -47,9 +47,61 @@
 		<a href="/board/write" class="write"> 게시판 글쓰기</a>
 		<a href="/board/fwrite" class="fwrite"> 게시판 파일 글쓰기</a>
 	</div>
+	
+	<div class="main">
+	<a href="#" id="board_list">최근 10개 글목록</a>
+	<table border="1" id="table_list">
+	    <tr>
+	        <th>번호</th><th>제목</th><th>작성자</th><th>작성시간</th><th>조회수</th>
+	    </tr>
+	</table>
 	</div>
 	
+	</div>
+	
+	
 	<footer th:insert="~{inc/footer}"></footer>
+	
+	<script src="/js/jquery-3.7.1.js"></script>
+	<script type="text/javascript">
+		$(function(){
+// 			alert("불러옴");
+// 			id="board_list" 클릭했을때
+			//ajax => http://localhost:8080/board/listJson
+			$(document).ready(function () {
+			    $("#board_list").click(function (event) {
+			        event.preventDefault();
+			        $.ajax({
+			            url: "http://localhost:8080/board/listJson",
+			            type: "GET",
+			            dataType: "json",
+			            success: function (data) {
+			                let tableBody = $("#table_list"); 
+							
+			                tableBody.find("tr:gt(0)").remove();
+
+			                $.each(data, function (index, item) {
+			                    let row = "<tr>" +
+			                        "<td>" + item.num + "</td>" +
+			                        "<td><a href='/board/content?num=" + item.num + "'>" + item.subject + "</a></td>" +
+			                        "<td>" + item.name + "</td>" +
+			                        "<td>" + item.rdate + "</td>" +
+			                        "<td>" + item.readcount + "</td>" +
+			                        "</tr>";
+			                    tableBody.append(row);
+			                });
+			            },
+			            error: function (xhr, status, error) {
+			                console.error("데이터를 불러오는 중 오류 발생:", error);
+			            }
+			        });
+			    });
+			});
+
+		});
+	</script>
+	
+	
 	
 </body>
 
