--- a/SpringBoot/src/main/resources/templates/inc/top.html
+++ b/SpringBoot/src/main/resources/templates/inc/top.html
@@ -16,7 +16,7 @@
 			<a href="/logout" th:if="${session.id != null}">로그아웃</a><br> <a
 				href="/info" th:if="${session.id != null}">나의 정보 조회</a><br> <a
 				href="/update" th:if="${session.id != null}">나의 정보 수정</a><br>
-				<a href="/delete" th:if="${session.id != null}">나의 정보 삭제</a><br>
+				<a href="/delete" th:if="${session.id != null}">회원탈퇴</a><br>
 				<a href="/list" th:if="${session.id == 'admin'}">회원목록</a><br>
 		</div>
 	</div>
