--- a/SpringBoot/src/main/resources/templates/member/info.html
+++ b/SpringBoot/src/main/resources/templates/member/info.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" th:href="@{/css/top.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/footer.css}">
 	<link rel="stylesheet" type="text/css" th:href="@{/css/member.css}">
+	<link rel="stylesheet" type="text/css" th:href="@{/css/list.css}">
 </head>
 
 <body>
@@ -13,7 +14,7 @@
 	-->
 	
 	<header th:insert="~{inc/top}"></header>
-	<div class="main">
+	<div class="Info">
 	<label> 아이디 : </label><span th:text="${member.id}" class="id"></span><br>
 	<label> 비밀번호 : </label><span th:text="${member.passwd}" class="passwd"></span><br>
 	<label> 이름 : </label><span th:text="${member.name}" class="name"></span><br>
